<resources>
    <string name="app_name">BasicsComponents</string>
    <string name="app_title">Componentes Básicos</string>
    <string name="portugueseTypeItHere_name">Digite seu nome</string>
    <string name="portugueseTypeItHere_email">Digite seu e-mail</string>
    <string name="portugueseButtonSendMessageStart">Enviar</string>
    <string name="portugueseSportsPreference">Esportes Favoritos:</string>
    <string name="portugueseSportsDesc1">Ciclismo de Estrada</string>
    <string name="portugueseSportsDesc2">Caminhada</string>
    <string name="portugueseSportsDesc3">Natação</string>
    <string name="portugueseSex">Sexo</string>
    <string name="portugueseSexMale">Masculino</string>
    <string name="portugueseSexFemale">Feminino</string>
</resources>