<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/_txtPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/portugueseTypeItHere_name"
        android:inputType="textPersonName" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/_txtMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0C4FD338"
            android:hint="@string/portugueseTypeItHere_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/_txtSportsPreference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/portugueseSportsPreference" />

    <CheckBox
        android:id="@+id/cbxSportsDesc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/portugueseSportsDesc1" />

    <CheckBox
        android:id="@+id/cbxSportsDesc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/portugueseSportsDesc2" />

    <CheckBox
        android:id="@+id/cbxSportsDesc3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/portugueseSportsDesc3" />

    <TextView
        android:id="@+id/txtSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/portugueseSex" />

    <RadioGroup
        android:id="@+id/radioGrpSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbtnSexMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/portugueseSexMale" />

        <RadioButton
            android:id="@+id/rbtnSexFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/portugueseSexFemale" />
    </RadioGroup>

    <Button
        android:id="@+id/_btnSendForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="fnSendMessage"
        android:text="@string/portugueseButtonSendMessageStart" />

    <TextView
        android:id="@+id/_txtStatusMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />
</LinearLayout>